--- a/css/style.css
+++ b/css/style.css
@@ -3,108 +3,65 @@
 }
 
 body {
-  background-color: #f7f7f7;
-  padding: 15px;
-  font-family: "Inter", sans-serif;
+  font-family: "Noto Sans", sans-serif;
 }
 
-.page-wrapper {
-  overflow: hidden;
-  max-width: 375px;
-  margin: 0 auto;
-  box-shadow: 0 0 30px rgba(128, 127, 127, 0.25);
-  background: #f7f7f7;
-  border-radius: 20px;
-}
-
-.container {
-  min-width: 300px;
-  margin: auto;
-}
-
-.header {
-  color: #fff;
-  padding: 40px 42px 145px 42px;
-  border-radius: 0 0 90px 90px;
-  background: url("../img/header-bg.png") no-repeat center / cover
-    rgba(58, 58, 58, 0.6);
-}
-
-.hello {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-}
-
-.hello-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
-}
-
-.user {
-  margin-top: -79px;
-  text-align: center;
-  background: #fff;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.05);
-  border-radius: 10px;
-  padding-bottom: 20px;
-}
-
-.user-avatar {
-  margin-top: -43px;
-  border-radius: 50%;
-  border: 4px solid #fffefe;
-}
-
-.user-name {
-  margin-top: 8px;
-  margin-bottom: 4px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 19px;
-}
-
-.user-profession {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 15px;
-  color: #6a6a6a;
-  margin-top: 4px;
-}
-
-.card {
-  background-color: #fff;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.05);
-  border-radius: 10px;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  padding: 20px;
-}
-
-.buttons {
+.navbar {
+  background-color: rgba(45, 45, 45);
   display: flex;
-  justify-content: space-between;
-  max-width: 260px;
-  margin: auto;
-  gap: 36px;
+  align-content: center;
+  color: #fff;
+  height: 94px;
+}
+
+.header-logo {
+  padding: 25px 50px;
+}
+
+.header-nav {
+  display: flex;
+  flex-basis: 100%;
+  list-style: none;
+  padding: 0 50px;
+  margin: 0;
+}
+
+.header-nav-link {
+  text-decoration: none;
+  font-size: 16px;
+  margin-right: 50px;
+  color: inherit;
+}
+
+.header-phone {
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-right: 50px;
+}
+
+.header-phone-link {
+  text-decoration: none;
+  font-size: 16px;
+  color: inherit;
 }
 
 .button {
-  background-color: #000;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 160%;
+  color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 40px;
-  flex-shrink: 1;
-  width: 100%;
-  border-radius: 5px;
+  background: #3a71d1;
+  padding: 25px 60px;
+  gap: 10px;
+  border: none;
+  flex-shrink: 0;
 }
 
-.button.vk {
-  background: #4c75a3;
-}
-
-.button.tg {
-  background: #0088cc;
+.header-button {
+  height: 100%;
 }
