--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,55 @@ body {
   font-family: "Noto Sans", sans-serif;
 }
 
+@font-face {
+  font-family: "Bebas Neue Pro";
+  src: local("Bebas Neue Pro Book"), local("Bebas-Neue-Pro-Book"),
+    url("../fonts/BebasNeuePro-Book.woff2") format("woff2"),
+    url("../fonts/BebasNeuePro-Book.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.container {
+  max-width: 1440px;
+  margin: auto;
+}
+
 .navbar {
-  background-color: rgba(45, 45, 45);
   display: flex;
   align-content: center;
   color: #fff;
   height: 94px;
+  position: relative;
+  border-bottom: 1px solid rgba(235, 235, 240, 0.2);
 }
 
+.header {
+  min-height: 100vh;
+}
+
+.header-image {
+  background-image: url("../img/header-bg.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+}
+
+.header-image::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(41, 45, 51, 0.6);
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
 .header-logo {
   padding: 25px 50px;
+  border-right: 1px solid rgba(235, 235, 240, 0.2);
+  height: 100%;
 }
 
 .header-nav {
@@ -52,16 +91,73 @@ body {
   font-size: 16px;
   line-height: 160%;
   color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background: #3a71d1;
   padding: 25px 60px;
-  gap: 10px;
   border: none;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.navbar-button {
   flex-shrink: 0;
+  height: 100%;
 }
 
 .header-button {
   height: 100%;
+}
+
+.seporater {
+  background: #5c8ee6;
+  width: 150px;
+  height: 2px;
+}
+
+.header-content {
+  padding-top: 150px;
+  position: relative;
+  z-index: 1;
+  color: #fff;
+}
+
+.header-title {
+  min-width: 1080px;
+  font-family: "Bebas Neue Pro";
+  font-size: 80px;
+  line-height: 120%;
+  margin: 30px 0;
+}
+
+.header-text {
+  max-width: 720px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 160%;
+  margin-bottom: 50px;
+}
+
+.header-features {
+  display: flex;
+  min-height: 168px;
+  padding: 0;
+  margin-top: 100px;
+  list-style: none;
+  color: #fff;
+  position: relative;
+}
+
+.header-features-item {
+  padding: 30px 50px;
+  border: 1px solid rgba(235, 235, 240, 0.2);
+}
+
+.header-feature-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 160%;
+}
+
+.header-features-item: not(: last-child) {
+  border-right: none;
 }
