--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,7 @@
 * {
   box-sizing: border-box;
-}
-
-body {
-  font-family: "Noto Sans", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 @font-face {
@@ -15,65 +13,67 @@ body {
   font-style: normal;
 }
 
-.container {
-  max-width: 1440px;
-  margin: auto;
+body {
+  font-family: "Noto Sans", sans-serif;
+  background: #fff;
 }
 
-.navbar {
-  display: flex;
-  align-content: center;
-  color: #fff;
-  height: 94px;
-  position: relative;
-  border-bottom: 1px solid rgba(235, 235, 240, 0.2);
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 50px;
 }
 
 .header {
+  padding: 94px;
   min-height: 100vh;
 }
 
 .header-image {
-  background-image: url("../img/header-bg.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  background: url("../img/header-bg.svg") center / cover no-repeat;
   position: relative;
 }
 
 .header-image::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
+  inset: 0;
   background: rgba(41, 45, 51, 0.6);
-  width: 100%;
-  height: 100%;
   z-index: 0;
 }
+
+.navbar {
+  display: flex;
+  align-items: center;
+  color: #fff;
+  height: 94px;
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
 .header-logo {
   padding: 25px 50px;
-  border-right: 1px solid rgba(235, 235, 240, 0.2);
-  height: 100%;
+  border-right: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .header-nav {
   display: flex;
-  flex-basis: 100%;
   list-style: none;
+  flex-wrap: nowrap;
+  gap: 50px;
   padding: 0 50px;
-  margin: 0;
+  flex: 1;
 }
 
 .header-nav-link {
   text-decoration: none;
+  color: #fff;
   font-size: 16px;
-  margin-right: 50px;
-  color: inherit;
 }
 
 .header-phone {
-  flex-shrink: 0;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -81,36 +81,17 @@ body {
 }
 
 .header-phone-link {
+  color: #fff;
   text-decoration: none;
-  font-size: 16px;
-  color: inherit;
 }
 
 .button {
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 160%;
-  color: #fff;
   background: #3a71d1;
-  padding: 25px 60px;
+  color: #fff;
+  padding: 18px 40px;
   border: none;
-  display: inline-block;
+  font-size: 16px;
   cursor: pointer;
-}
-
-.navbar-button {
-  flex-shrink: 0;
-  height: 100%;
-}
-
-.header-button {
-  height: 100%;
-}
-
-.seporater {
-  background: #5c8ee6;
-  width: 150px;
-  height: 2px;
 }
 
 .header-content {
@@ -120,8 +101,15 @@ body {
   color: #fff;
 }
 
+.separator {
+  width: 150px;
+  height: 2px;
+  background: #5c8ee6;
+  margin-bottom: 30px;
+}
+
 .header-title {
-  min-width: 1080px;
+  max-width: 1080px;
   font-family: "Bebas Neue Pro";
   font-size: 80px;
   line-height: 120%;
@@ -149,15 +137,92 @@ body {
 
 .header-features-item {
   padding: 30px 50px;
-  border: 1px solid rgba(235, 235, 240, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-.header-feature-text {
+.header-features-text {
   font-weight: 400;
   font-size: 16px;
   line-height: 160%;
 }
 
-.header-features-item: not(: last-child) {
+.header-features-item:not(:last-child) {
   border-right: none;
+}
+
+.section {
+  margin-top: 150px;
+  margin-bottom: 150px;
+  position: relative;
+}
+
+.section-title {
+  font-family: "Bebas Neue Pro";
+  font-size: 60px;
+  line-height: 120%;
+  color: #292d33;
+}
+
+.steps {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  gap: 30px;
+}
+
+.steps-item {
+  max-width: 330px;
+}
+
+.steps-num {
+  font-family: "Bebas Neue Pro";
+  font-size: 48px;
+  line-height: 120%;
+  color: #5c8ee6;
+  display: flex;
+  align-items: center;
+}
+
+.steps-num::after {
+  content: "";
+  height: 1px;
+  background: #ebebf0;
+  width: 100%;
+  margin-left: 30px;
+}
+
+.steps-title {
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 120%;
+  color: #292d33;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.steps-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 160%;
+  color: #828a99;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.steps-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 160%;
+  color: #5c8ee6;
+}
+
+.steps-link:before {
+  content: "";
+  height: 1px;
+  background: #5c8ee6;
+  width: 40px;
+  margin-right: 20px;
 }
