--- a/css/style.css
+++ b/css/style.css
@@ -16,17 +16,13 @@
 body {
   font-family: "Noto Sans", sans-serif;
   background: #fff;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 0 50px;
-}
-
-.header {
-  padding: 94px;
-  min-height: 100vh;
 }
 
 .header-image {
@@ -48,9 +44,32 @@ body {
   color: #fff;
   height: 94px;
   position: fixed;
-  z-index: 2;
   width: 100%;
+  left: 0;
+  top: 0;
+  padding: 0;
+  z-index: 2;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  transition: background-color 0.2s;
+}
+
+.navbar-light {
+  background: #fff;
+  color: #292d33;
+}
+
+.navbar-light .header-logo-path {
+  fill: #292d33;
+}
+
+.navbar-light .header-nav-link,
+.navbar-light .header-phone-link {
+  color: #292d33;
+}
+
+.header {
+  padding-top: 94px;
+  min-height: 100vh;
 }
 
 .header-logo {
@@ -60,6 +79,9 @@ body {
 
 .header-nav {
   display: flex;
+  align-items: center;
+  height: 100%;
+  margin: 0;
   list-style: none;
   flex-wrap: nowrap;
   gap: 50px;
@@ -224,5 +246,4 @@ body {
   height: 1px;
   background: #5c8ee6;
   width: 40px;
-  margin-right: 20px;
 }
