--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+html {
+  font-size: 16px;
+}
+
 @font-face {
   font-family: "Bebas Neue Regular";
   src: url("../fonts/BebasNeueRegular.woff") format("woff");
@@ -19,14 +23,14 @@ body {
 }
 
 .container {
-  max-width: 1440px;
+  max-width: 90rem;
   margin: 0 auto;
 }
 
 .header-image {
   background: url("../img/header-bg.jpg");
   background-size: cover;
-  background-position: center bottom -90px;
+  background-position: center bottom -5.625rem;
   position: relative;
 }
 
@@ -42,21 +46,26 @@ body {
   display: flex;
   align-items: center;
   color: #fff;
-  height: 94px;
+  height: 5.875rem;
   position: fixed;
   width: 100%;
   left: 0;
   top: 0;
   padding: 0;
   z-index: 2;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 0.0625rem solid rgba(255, 255, 255, 0.2);
   transition: background-color 0.2s, height 0.2s;
 }
 
 .navbar-light {
   background-color: #fff;
   color: #292d33;
-  height: 74px;
+  height: 4.5rem;
+}
+
+.logo-svg {
+  width: 9rem;
+  height: 2.75rem;
 }
 
 .navbar-light .header-logo-path {
@@ -69,14 +78,15 @@ body {
 }
 
 .header {
-  padding-top: 94px;
+  padding-top: 5.875rem;
   min-height: 100vh;
 }
 
 .header-logo {
   display: flex;
   align-items: center;
-  padding: 0 50px;
+  padding: 0;
+  padding-left: 3.125rem;
   border-right: 1px solid rgba(235, 235, 240, 0.2);
   height: 100%;
 }
@@ -88,22 +98,26 @@ body {
   margin: 0;
   list-style: none;
   flex-wrap: nowrap;
-  gap: 50px;
-  padding: 0 50px;
+  gap: 3.125rem;
+  padding: 0 3.125rem;
   flex: 1;
+}
+
+.header-nav-item:not(:last-child) {
+  margin-right: 3.125rem;
 }
 
 .header-nav-link {
   text-decoration: none;
-  color: #fff;
-  font-size: 16px;
+  color: inherit;
+  font-size: 1rem;
 }
 
 .header-phone {
   display: flex;
   align-items: center;
-  gap: 10px;
-  margin-right: 50px;
+  gap: 0.625rem;
+  margin-right: 3.125rem;
 }
 
 .header-phone-link {
@@ -114,16 +128,16 @@ body {
 .button {
   background: #3a71d1;
   color: #fff;
-  padding: 25px 62px;
+  padding: 1.5625rem 3.875rem;
   border: none;
-  font-size: 16px;
+  font-size: 1rem;
   cursor: pointer;
 }
 
 .navbar-button {
   flex-shrink: 0;
   height: 100%;
-  padding: 25px 62px;
+  padding: 1.5625rem 3.875rem;
 }
 
 .header-button {
@@ -131,66 +145,62 @@ body {
 }
 
 .header-content {
-  padding-top: 150px;
+  padding-top: 9.375rem;
   position: relative;
   z-index: 1;
   color: #fff;
 }
 
 .header-title {
-  max-width: 1080px;
+  max-width: 67.5rem;
   font-family: "Bebas Neue Regular";
-  font-size: 80px;
+  font-size: 5rem;
   line-height: 120%;
-  margin: 23px 0;
-  /* margin: 30px 0;
-  letter-spacing: 0.8px;
-  word-spacing: -1.6px; */
+  margin: 1.4375rem 0;
 }
 
 .header-text {
-  max-width: 720px;
+  max-width: 45rem;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 160%;
-  margin-bottom: 50px;
-  padding: 15px 1px;
+  margin-bottom: 3.125rem;
+  padding: 0.9375rem 0.0625rem;
 }
 
 .header-features {
   display: flex;
-  min-height: 168px;
+  min-height: 10.5rem;
   padding: 0;
-  margin-top: 100px;
+  margin-top: 6.25rem;
   list-style: none;
   color: #fff;
   position: relative;
 }
 
 .separator {
-  width: 150px;
-  height: 2px;
+  width: 9.375rem;
+  height: 0.125rem;
   background: #5c8ee6;
 }
 
 .header-features-item {
-  padding: 40px 50px;
-  width: 288px;
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 2.5rem 3.125rem;
+  width: 18rem;
+  border: 0.0625rem solid rgba(255, 255, 255, 0.2);
 }
 
 .header-button {
-  padding: 15px 70px;
-  /* margin-top: 25px; */
+  padding: 0.9375rem 4.375rem;
 }
 
 .header-features-text {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 160%;
   margin-bottom: 0;
-  margin-top: 18px;
+  margin-top: 1.125rem;
 }
 
 .header-features-item:not(:last-child) {
@@ -198,64 +208,64 @@ body {
 }
 
 .section {
-  margin-top: 150px;
-  margin-bottom: 150px;
+  margin-top: 9.375rem;
+  margin-bottom: 9.375rem;
   position: relative;
 }
 
 .section-title {
   font-family: "Bebas Neue Regular";
-  font-size: 60px;
+  font-size: 3.75rem;
   line-height: 120%;
   color: #292d33;
-  padding: 17px 2px;
+  padding: 1.0625rem 0.125rem;
 }
 
 .steps {
   display: flex;
   list-style: none;
-  padding: 20px 0;
-  gap: 30px;
+  padding: 1.25rem 0;
+  gap: 1.875rem;
 }
 
 .steps-item {
-  max-width: 330px;
+  max-width: 20.625rem;
 }
 
 .steps-num {
   font-family: "Bebas Neue Regular";
-  font-size: 48px;
+  font-size: 3rem;
   line-height: 120%;
   color: #5c8ee6;
   display: flex;
   align-items: center;
-  padding: 9px 0;
+  padding: 0.5625rem 0;
 }
 
 .steps-num::after {
   content: "";
-  height: 1px;
+  height: 0.0625rem;
   background: #ebebf0;
   width: 100%;
-  margin-left: 30px;
+  margin-left: 1.875rem;
 }
 
 .steps-title {
   font-weight: 400;
-  font-size: 28px;
+  font-size: 1.75rem;
   line-height: 120%;
   color: #292d33;
-  margin-top: 30px;
-  margin-bottom: 10px;
+  margin-top: 1.875rem;
+  margin-bottom: 0.625rem;
 }
 
 .steps-text {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 160%;
   color: #828a99;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 0.625rem;
+  margin-bottom: 1.25rem;
 }
 
 .steps-link {
@@ -263,14 +273,24 @@ body {
   align-items: center;
   text-decoration: none;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 160%;
   color: #5c8ee6;
 }
 
 .steps-link:before {
   content: "";
-  height: 1px;
+  height: 0.0625rem;
   background: #5c8ee6;
-  width: 40px;
+  width: 2.5rem;
+}
+
+@media (max-width: 1700px) {
+  html {
+    font-size: 14px;
+  }
+
+  .header-image {
+    background-position: center;
+  }
 }
