--- a/css/style.css
+++ b/css/style.css
@@ -370,12 +370,12 @@ body {
   }
 
   .mobile-menu-toggle {
-    width: 5rem;
+    width: 80px;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 1.8rem;
+    padding: 22px;
     border-right: 1px solid rgba(235, 235, 240, 0.2);
   }
 
@@ -384,9 +384,10 @@ body {
   }
 
   .mobile-menu-line {
-    height: 0.0625rem;
+    height: 1px;
     background-color: #fff;
     width: 100%;
+    transition: transform 0.2s;
   }
 
   .mobile-menu-line:nth-child(2) {
@@ -478,5 +479,17 @@ body {
     font-size: 14px;
     line-height: 160%;
     color: #292d33;
+  }
+
+  .close-menu .mobile-menu-line:nth-child(2) {
+    display: none;
+  }
+
+  .close-menu .mobile-menu-line:nth-child(1) {
+    transform: rotate(45deg) translateY(9px);
+  }
+
+  .close-menu .mobile-menu-line:nth-child(3) {
+    transform: rotate(-45deg) translateY(-9px);
   }
 }
