add: add narrows

--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,6 @@ body {
 
 .header {
   padding-top: 5.875rem;
-  min-height: 100vh;
 }
 
 .header-logo {
@@ -194,9 +193,26 @@ body {
 }
 
 .header-features-item {
-  padding: 2.5rem 3.125rem;
+  padding: 1.75rem 3.125rem;
+  min-height: 100%;
   width: 18rem;
-  border: 0.0625rem solid rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(235, 235, 240, 0.2);
+}
+
+.slider-buttons {
+  display: flex;
+  height: 44px;
+}
+
+.slider-button-prev,
+.slider-button-next {
+  height: 100%;
+  flex-basis: 50%;
+  border: 1px solid rgba(235, 235, 240, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .header-button {
@@ -209,10 +225,6 @@ body {
   line-height: 160%;
   margin-bottom: 0;
   margin-top: 1.125rem;
-}
-
-.header-features-item:not(:last-child) {
-  border-right: none;
 }
 
 .section {
@@ -293,9 +305,9 @@ body {
   width: 2.5rem;
 }
 
-@media (max-width: 1700px) {
+@media (max-width: 992px) {
   html {
-    font-size: 14px;
+    font-size: 12px;
   }
 
   .header-image {
@@ -334,7 +346,7 @@ body {
 
 @media (max-width: 1200px) {
   .container {
-    max-width: 60rem;
+    max-width: 70rem;
   }
 
   .header-phone {
@@ -349,6 +361,10 @@ body {
     padding-left: 2rem;
     padding-right: 2rem;
   }
+}
+
+.slider-buttons {
+  display: flex;
 }
 
 @media (max-width: 992px) {
@@ -491,5 +507,33 @@ body {
 
   .close-menu .mobile-menu-line:nth-child(3) {
     transform: rotate(-45deg) translateY(-9px);
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 40rem;
+  }
+
+  .header-title {
+    font-size: 4rem;
+  }
+
+  .header-content {
+    padding-top: 3rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    max-width: 40rem;
+  }
+
+  .header-title {
+    font-size: 4rem;
+  }
+
+  .header-content {
+    padding-top: 3rem;
   }
 }
