add: add sliders

--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ body {
 .steps {
   display: flex;
   list-style: none;
-  padding: 1.25rem 0;
+  padding: 0;
   gap: 1.875rem;
 }
 
@@ -305,14 +305,21 @@ body {
   width: 2.5rem;
 }
 
-@media (max-width: 992px) {
-  html {
-    font-size: 12px;
-  }
+.steps-buttons {
+  display: none;
+  height: 40px;
+  justify-content: flex-end;
+}
 
-  .header-image {
-    background-position: center;
-  }
+.steps-button-prev,
+.steps-button-next {
+  background: #5c8ee6;
+  height: 100%;
+  width: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 @media (max-width: 1460px) {
@@ -367,9 +374,17 @@ body {
   display: flex;
 }
 
+.steps-buttons {
+  display: flex;
+}
+
 @media (max-width: 992px) {
   html {
     font-size: 0.75rem;
+  }
+
+  .header-image {
+    background-position: center;
   }
 
   .container {
