add: add hoover effects

--- a/css/style.css
+++ b/css/style.css
@@ -106,14 +106,32 @@ body {
   flex: 1;
 }
 
-.header-nav-item:not(:last-child) {
-  margin-right: 3.125rem;
-}
-
 .header-nav-link {
+  display: flex;
+  height: 100%;
+  align-items: center;
   text-decoration: none;
   color: inherit;
   font-size: 1rem;
+  position: relative;
+}
+
+.header-nav-link:after {
+  content: "";
+  width: 0px;
+  position: absolute;
+  bottom: -1px;
+  background-color: #5c8ee6;
+  height: 2px;
+  transition: width 0.2s;
+  right: 0;
+  left: auto;
+}
+
+.header-nav-link:hoover::after {
+  width: 100%;
+  right: auto;
+  left: 0;
 }
 
 .header-phone {
@@ -303,6 +321,12 @@ body {
   height: 0.0625rem;
   background: #5c8ee6;
   width: 2.5rem;
+  margin-right: 1rem;
+  transition: width 0.2s;
+}
+
+.steps-link:hoover:before {
+  width: 60px;
 }
 
 .steps-buttons {
@@ -322,10 +346,74 @@ body {
   cursor: pointer;
 }
 
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  text-decoration: none;
+  flex-basis: 33%;
+  border: 1px solid #ebebf0;
+  position: relative;
+  transition: border 0.2s;
+}
+
+.card:hoover .card-title {
+  color: #5c8ee6;
+}
+
+.card:hoover {
+  border-color: #5c8ee6;
+}
+
+.card-content {
+  padding: 2.5rem 3.125rem;
+}
+
+.card-title {
+  font-weight: 400;
+  font-size: 1.75rem;
+  line-height: 140%;
+  color: #292d33;
+  margin-top: 0;
+  margin-bottom: 0.625rem;
+  transition: color 0.2s;
+}
+
+.card-text {
+  font-size: 1rem;
+  line-height: 160%;
+  color: #828a99;
+  margin-bottom: 24.625rem;
+}
+
+.card-image {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 0;
+  width: 90%;
+}
+
+@media (max-width: 1700px) {
+  html {
+    font-size: 14px;
+  }
+
+  .header-image {
+    background-position: center;
+  }
+}
+
 @media (max-width: 1460px) {
   html {
     font-size: 13px;
   }
+  .header-logo {
+    padding: 2rem;
+  }
+
   .header-logo {
     padding: 2rem;
   }
@@ -339,15 +427,32 @@ body {
   }
 
   .header-nav {
-    padding-left: 2rem;
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    list-style: none;
+    padding: 0;
+    padding-left: 3.125rem;
+    margin: 0;
+    height: 100%;
+  }
+
+  .header-nav-item {
+    height: 100%;
+    display: flex;
+    align-items: center;
   }
 
   .header-nav-item:not(:last-child) {
-    margin-right: 1rem;
+    margin-right: 4%;
   }
 
   .header-phone {
-    margin-right: 2rem;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    gap: 0.625rem;
+    margin-right: 3.125em;
   }
 }
 
@@ -376,6 +481,10 @@ body {
 
 .steps-buttons {
   display: flex;
+}
+
+.card {
+  flex-basis: 50%;
 }
 
 @media (max-width: 992px) {
@@ -536,6 +645,10 @@ body {
 
   .header-content {
     padding-top: 3rem;
+  }
+
+  .card {
+    flex-basis: 100%;
   }
 }
 
