--- a/css/style.css
+++ b/css/style.css
@@ -363,7 +363,7 @@ body {
   transition: border 0.2s;
 }
 
-.card:hoover .card-title {
+.card:hover .card-title {
   color: #5c8ee6;
 }
 
@@ -595,6 +595,125 @@ body {
   align-items: center;
   margin-top: 1.875rem;
   justify-content: space-between;
+}
+
+.bg-grey {
+  background: #f0f2f5;
+}
+
+.section-cta {
+  position: relative;
+  padding-top: 6.25rem;
+  margin-top: 9.375rem;
+  padding-bottom: 6.25rem;
+}
+
+.cta-image {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  max-width: 45rem;
+  width: 50%;
+}
+
+.cta-form-wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.cta-form {
+  max-width: 52.5rem;
+}
+
+.cta-form-text {
+  font-size: 1rem;
+  font-weight: 400;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 160%;
+  color: #828a99;
+  margin-top: 1.375rem;
+  margin-bottom: 2.5rem;
+  min-width: 40rem;
+}
+
+.input-group-wrapper {
+  display: flex;
+  gap: 1.875rem;
+}
+
+.input-group {
+  position: relative;
+  height: 4.125rem;
+  flex-grow: 1;
+  background-color: #f0f2f5;
+}
+
+.input {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 1.25rem 1.875rem;
+  border: 1px solid #e4e4eb;
+  background-color: transparent;
+}
+
+.input-group-label {
+  position: absolute;
+  cursor: text;
+  top: 1.5rem;
+  left: 1.975rem;
+  font-weight: 400;
+  font-size: 16px;
+  color: #828a99;
+  transition: top 0.2s left 0.2s font-size 0.2s;
+}
+
+.input:focus {
+  border: 1px solid #5c8ee6;
+  outline: 0;
+}
+
+.input:focus ~ .input-group-label,
+.input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
+  top: -0.5rem;
+  left: 1.25rem;
+  font-size: 0.625rem;
+  background-color: inherit;
+  padding: 0 10px;
+}
+
+.cta-form-footer {
+  display: flex;
+  margin-top: 1.875rem;
+  gap: 1.875rem;
+  align-items: center;
+}
+
+.cta-form-button {
+  flex-shrink: 0;
+}
+
+.notify {
+  display: flex;
+  align-items: flex-start;
+  gap: 0.625rem;
+}
+
+.notify-icon {
+  flex-shrink: 0;
+}
+
+.notify-text {
+  max-width: 23.75rem;
+  margin: 0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 160%;
+  color: #828a99;
 }
 
 @media (max-width: 1700px) {
