--- a/css/style.css
+++ b/css/style.css
@@ -716,6 +716,162 @@ body {
   color: #828a99;
 }
 
+.footer-top {
+  padding-top: 3.125rem;
+  padding-bottom: 3.125rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer-logo {
+  width: 12.5rem;
+  height: 3.75rem;
+}
+
+.footer-info {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-style: normal;
+  color: #292d33;
+  gap: 0.625rem;
+}
+
+.footer-info-address,
+.footer-info-email {
+  font-style: inherit;
+  text-decoration: inherit;
+  color: inherit;
+}
+
+.footer-phone {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 2rem;
+  line-height: 160%;
+  text-decoration-line: underline;
+  color: #292d33;
+}
+
+.footer-social-link {
+  text-decoration: none;
+}
+
+.footer-seporator {
+  color: #ebebf0;
+  background-color: #ebebf0;
+}
+
+.footer-bottom {
+  padding-top: 3.125rem;
+  padding-bottom: 3.125rem;
+}
+
+.footer-menu-title {
+  margin: 0;
+  margin-bottom: 1.875rem;
+  font-size: 1rem;
+  font-weight: 600;
+  font-style: normal;
+  line-height: 160%;
+  color: #292d33;
+}
+
+.footer-menu-list {
+  margin: 0;
+  padding-left: 1.25rem;
+  list-style: none;
+}
+
+.footer-menu-column-2 {
+  columns: 20rem auto;
+  min-width: 50rem;
+}
+
+.footer-menu-link {
+  text-decoration: none;
+  color: #828a99;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 160%;
+  margin-bottom: 0.9375rem;
+  display: block;
+}
+
+.footer-menu-link-bold {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  line-height: 160%;
+  color: #292d33;
+  margin-bottom: 1.875rem;
+}
+
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-menu-wrapper:last-child {
+  margin-left: 5rem;
+}
+
+.footer-wrapper {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  font-style: normal;
+  color: #828a99;
+}
+
+.footer-wrapper,
+.footer-legal {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 4.375rem;
+}
+
+.footer-copyright,
+.footer-policy {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 160%;
+  color: inherit;
+}
+
+/* hoover effects */
+@media (hover: hover) {
+  .button-link:hover::before {
+    width: 60px;
+  }
+
+  .card:hover .card-title {
+    color: #5c8ee6;
+  }
+
+  .card:hover {
+    background-color: #5c8ee6;
+  }
+
+  .trademark-card:hover {
+    border-color: #5c8ee6;
+  }
+
+  .trademark-card:hover .trademark-card-logo {
+    fill: #5c8ee6;
+  }
+
+  .trademark-card:hover .trademark-card-title {
+    color: #5c8ee6;
+  }
+
+  .clients-list-item:hover {
+    filter: grayscale(0%);
+  }
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 14px;
