--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,26 @@ body {
 .navbar-light {
   background-color: #fff;
   color: #292d33;
+}
+
+.navbar-light .logo-light {
+  display: none;
+}
+
+.navbar-light .logo-dark {
+  display: block;
+}
+
+.navbar-scroll {
   height: 4.5rem;
+}
+
+.phone-icon {
+  fill: #5c8ee6;
+}
+
+.logo-dark {
+  display: none;
 }
 
 .logo-svg {
